# gfm

./: inference_gfm.py  pyproject.toml
gfmrag/graph_index_construction/: langchain_util.py
gfmrag/graph_index_construction/ner_model/: llm_ner_model.py
gfmrag/graph_index_construction/openie_model/: llm_openie_model.py
gfmrag/llms/: __init__.py  vllm_chat.py
gfmrag/workflow/: README.md
gfmrag/workflow/config/ner_model/: llm_ner_model.yaml
gfmrag/workflow/config/openie_model/: llm_openie_model.yaml
scripts/gfm-rag/: serve_vllm_llm.sh  stage1_data_index.sh  stage3_qa_inference.sh  stage3_qa_ircot_inference.sh
